Added the necessary variables to the env example file and hid all env files with gitignore

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 # Example env file, copy this file and fill it in.
 
-
+# PORT = 
+# DB_HOST = 
+# DB_USER = 
+# DB_PASSWORD = 
+# DB_DATABASE = 
+# JWT_KEY =
